remove duration field from ResourceBooking
