# docs/swagger.yaml
@@ -1662,6 +1662,10 @@ components:
           format: date-time
           example: "2020-09-27T04:17:23.131Z"
           description: "The job end date."
+        duration:
+          type: integer
+          example: 1
+          description: "The duration in weeks"
         numPositions:
           type: integer
           example: 13
@@ -1941,10 +1945,6 @@ components:
           format: date-time
           example: "2020-09-27T04:17:23.131Z"
           description: "The resource booking end date."
-        duration:
-          type: integer
-          example: 1
-          description: "The duration in weeks"
         memberRate:
           type: integer
           format: float
@@ -2005,10 +2005,6 @@ components:
           format: date-time
           example: "2020-09-27T04:17:23.131Z"
           description: "The resource booking end date."
-        duration:
-          type: integer
-          example: 1
-          description: "The duration in weeks"
         memberRate:
           type: number
           format: float
@@ -2038,10 +2034,6 @@ components:
           format: date-time
           example: "2020-09-27T04:17:23.131Z"
           description: "The resource booking end date."
-        duration:
-          type: integer
-          example: 1
-          description: "The duration in weeks"
         memberRate:
           type: number
           format: float
