# src/services/ResourceBookingService.js
@@ -102,9 +102,6 @@ async function createResourceBooking (currentUser, resourceBooking) {
   }
   await helper.ensureUserById(resourceBooking.userId) // ensure user exists
 
-  // create startDate, endDate and/or duration
-  Object.assign(resourceBooking, helper.calculateDuration(_.pick(resourceBooking, ['startDate', 'endDate', 'duration'])))
-
   resourceBooking.id = uuid()
   resourceBooking.createdAt = new Date()
   resourceBooking.createdBy = await helper.getUserId(currentUser.userId)
@@ -123,7 +120,6 @@ createResourceBooking.schema = Joi.object().keys({
     jobId: Joi.string().uuid(),
     startDate: Joi.date(),
     endDate: Joi.date(),
-    duration: Joi.number().integer().min(1),
     memberRate: Joi.number(),
     customerRate: Joi.number(),
     rateType: Joi.rateType().required()
@@ -145,12 +141,6 @@ async function updateResourceBooking (currentUser, id, data) {
 
   const resourceBooking = await ResourceBooking.findById(id)
   const oldValue = resourceBooking.toJSON()
-
-  // update startDate, endDate and/or duration
-  Object.assign(data, helper.updateDuration(
-    _.pick(resourceBooking, ['startDate', 'endDate', 'duration']),
-    _.pick(data, ['startDate', 'endDate', 'duration'])
-  ))
 
   data.updatedAt = new Date()
   data.updatedBy = await helper.getUserId(currentUser.userId)
@@ -179,7 +169,6 @@ partiallyUpdateResourceBooking.schema = Joi.object().keys({
     status: Joi.jobStatus(),
     startDate: Joi.date(),
     endDate: Joi.date(),
-    duration: Joi.number().integer().min(1),
     memberRate: Joi.number(),
     customerRate: Joi.number(),
     rateType: Joi.rateType()
@@ -210,7 +199,6 @@ fullyUpdateResourceBooking.schema = Joi.object().keys({
     jobId: Joi.string().uuid(),
     startDate: Joi.date(),
     endDate: Joi.date(),
-    duration: Joi.number().integer().min(1),
     memberRate: Joi.number(),
     customerRate: Joi.number(),
     rateType: Joi.rateType().required(),
